--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Mukta:wght@300;400;500&family=Tilt+Prism&display=swap');
 body{
-  background-color: rgb(57, 167, 167);
+  background-color: rgb(162, 232, 243);
   font-family: 'Mukta', sans-serif;
 }
 img{
   width: 500px;
 }
 h1{
-  color: rgb(217, 177, 177);
+  color: rgb(174, 10, 186);
+  display: flex;
+  justify-content: center;
 }
